--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,15 @@
 
 :root {
   --white: white;
-  --background: #F4F6FA;
+
+  --gray-100: #F4F6FA;
+  --gray-500: #EAEEF4;
+
+  --blue-400: #4485F9;
+  --red-100: #FF9DB5;
+  --red-600: #f60d47;
+
+  --background: var(--gray-100);
   --foreground: #171717;
 }
 
