--- a/src/react/views/pharmProducts/style.css
+++ b/src/react/views/pharmProducts/style.css
@@ -2,6 +2,8 @@
     background-color: white;
     border-radius: 10px;
 
+    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.1);
+
     /* TODO: check */
     /* margin: 10px;  */
 }
